ply-3.11/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    QUOTE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON programa1
Rule 2     programa1 -> decvars bloque programa2
Rule 3     programa1 -> decvars bloque
Rule 4     programa1 -> programa2
Rule 5     programa2 -> principal
Rule 6     principal -> MAIN LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto RBRACKET END
Rule 7     decvars -> multivars
Rule 8     decvars -> empty
Rule 9     multivars -> vars
Rule 10    multivars -> vars multivars
Rule 11    vars -> VAR tipo ID SEMICOLON
Rule 12    vars -> VAR tipo ID vars1
Rule 13    vars -> VAR tipo ID arr SEMICOLON
Rule 14    vars -> VAR tipo ID arr vars1
Rule 15    vars1 -> COMMA ID vars1
Rule 16    vars1 -> COMMA ID SEMICOLON
Rule 17    vars1 -> COMMA ID arr vars1
Rule 18    vars1 -> COMMA ID arr SEMICOLON
Rule 19    tipo -> INT
Rule 20    tipo -> FLOAT
Rule 21    tipo -> CHAR
Rule 22    tipo -> STRING
Rule 23    arr -> LSQRBRACKET CTEI RSQRBRACKET
Rule 24    parameters -> parameters2
Rule 25    parameters -> empty
Rule 26    parameters2 -> tipo ID
Rule 27    parameters2 -> tipo ID parameters3
Rule 28    parameters3 -> COMMA ID parameters3
Rule 29    parameters3 -> COMMA tipo ID parameters3
Rule 30    parameters3 -> COMMA ID
Rule 31    parameters3 -> COMMA tipo ID
Rule 32    bloque -> funcion
Rule 33    bloque -> funcion bloque
Rule 34    bloque -> empty
Rule 35    funcion -> FUNCTION tipo ID LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto retorno RBRACKET
Rule 36    funcion -> FUNCTION VOID ID LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto RBRACKET
Rule 37    retorno -> RETURN ID SEMICOLON
Rule 38    estatuto -> estatuto2
Rule 39    estatuto -> empty
Rule 40    estatuto2 -> estatuto3
Rule 41    estatuto2 -> estatuto3 estatuto2
Rule 42    estatuto3 -> asignacion SEMICOLON
Rule 43    estatuto3 -> llamada SEMICOLON
Rule 44    estatuto3 -> lectura SEMICOLON
Rule 45    estatuto3 -> escritura SEMICOLON
Rule 46    estatuto3 -> for
Rule 47    estatuto3 -> if
Rule 48    estatuto3 -> while
Rule 49    asignacion -> ID EQUALS expresion
Rule 50    asignacion -> ID arr EQUALS expresion
Rule 51    llamada -> ID LPARENTHESIS expresion RPARENTHESIS
Rule 52    lectura -> READ LPARENTHESIS leevars RPARENTHESIS
Rule 53    leevars -> ID
Rule 54    leevars -> ID COMMA leevars
Rule 55    leevars -> ID arr
Rule 56    leevars -> ID arr COMMA leevars
Rule 57    escritura -> PRINT LPARENTHESIS escritura1 RPARENTHESIS
Rule 58    escritura1 -> escritura2
Rule 59    escritura1 -> escritura2 COMMA escritura1
Rule 60    escritura2 -> CTEI
Rule 61    escritura2 -> CTEF
Rule 62    escritura2 -> CTESTRING
Rule 63    escritura2 -> CTEC
Rule 64    escritura2 -> expresion
Rule 65    for -> FOR LPARENTHESIS FROM asignacion COMMA TO expresion RPARENTHESIS LBRACKET estatuto RBRACKET
Rule 66    if -> IF LPARENTHESIS expresion RPARENTHESIS THEN LBRACKET estatuto RBRACKET
Rule 67    if -> IF LPARENTHESIS expresion RPARENTHESIS THEN LBRACKET estatuto RBRACKET else
Rule 68    else -> ELSE LBRACKET estatuto RBRACKET
Rule 69    else -> empty
Rule 70    while -> WHILE LPARENTHESIS expresion RPARENTHESIS LBRACKET estatuto RBRACKET
Rule 71    expresion -> expresion1
Rule 72    expresion -> expresion1 OR expresion1
Rule 73    expresion1 -> expresion2
Rule 74    expresion1 -> expresion2 AND expresion2
Rule 75    expresion2 -> suma
Rule 76    expresion2 -> suma expresioncomp suma
Rule 77    expresioncomp -> suma GTHAN suma
Rule 78    expresioncomp -> suma LTHAN suma
Rule 79    expresioncomp -> suma GTHANEQ suma
Rule 80    expresioncomp -> suma LTHANEQ suma
Rule 81    expresioncomp -> suma DIFFERENT suma
Rule 82    suma -> multiplicacion
Rule 83    suma -> multiplicacion PLUS multiplicacion
Rule 84    suma -> multiplicacion MINUS multiplicacion
Rule 85    multiplicacion -> expresion3
Rule 86    multiplicacion -> expresion3 MULTIPLICATION expresion3
Rule 87    multiplicacion -> expresion3 DIVISION expresion3
Rule 88    expresion3 -> CTEI
Rule 89    expresion3 -> CTEF
Rule 90    expresion3 -> CTEC
Rule 91    expresion3 -> CTESTRING
Rule 92    expresion3 -> LPARENTHESIS expresion3 RPARENTHESIS
Rule 93    expresion3 -> llamada
Rule 94    expresion3 -> leevars
Rule 95    empty -> <empty>

Terminals, with rules where they appear

AND                  : 74
CHAR                 : 21
COLON                : 
COMMA                : 15 16 17 18 28 29 30 31 54 56 59 65
CTEC                 : 63 90
CTEF                 : 61 89
CTEI                 : 23 60 88
CTESTRING            : 62 91
DIFFERENT            : 81
DIVISION             : 87
ELSE                 : 68
END                  : 6
EQUALS               : 49 50
FLOAT                : 20
FOR                  : 65
FROM                 : 65
FUNCTION             : 35 36
GTHAN                : 77
GTHANEQ              : 79
ID                   : 1 11 12 13 14 15 16 17 18 26 27 28 29 30 31 35 36 37 49 50 51 53 54 55 56
IF                   : 66 67
INT                  : 19
LBRACKET             : 6 35 36 65 66 67 68 70
LPARENTHESIS         : 6 35 36 51 52 57 65 66 67 70 92
LSQRBRACKET          : 23
LTHAN                : 78
LTHANEQ              : 80
MAIN                 : 6
MINUS                : 84
MULTIPLICATION       : 86
OR                   : 72
PLUS                 : 83
PRINT                : 57
PROGRAM              : 1
QUOTE                : 
RBRACKET             : 6 35 36 65 66 67 68 70
READ                 : 52
RETURN               : 37
RPARENTHESIS         : 6 35 36 51 52 57 65 66 67 70 92
RSQRBRACKET          : 23
SEMICOLON            : 1 11 13 16 18 37 42 43 44 45
STRING               : 22
THEN                 : 66 67
TO                   : 65
VAR                  : 11 12 13 14
VOID                 : 36
WHILE                : 70
error                : 

Nonterminals, with rules where they appear

arr                  : 13 14 17 18 50 55 56
asignacion           : 42 65
bloque               : 2 3 33
decvars              : 2 3 6 35 36
else                 : 67
empty                : 8 25 34 39 69
escritura            : 45
escritura1           : 57 59
escritura2           : 58 59
estatuto             : 6 35 36 65 66 67 68 70
estatuto2            : 38 41
estatuto3            : 40 41
expresion            : 49 50 51 64 65 66 67 70
expresion1           : 71 72 72
expresion2           : 73 74 74
expresion3           : 85 86 86 87 87 92
expresioncomp        : 76
for                  : 46
funcion              : 32 33
if                   : 47
lectura              : 44
leevars              : 52 54 56 94
llamada              : 43 93
multiplicacion       : 82 83 83 84 84
multivars            : 7 10
parameters           : 6 35 36
parameters2          : 24
parameters3          : 27 28 29
principal            : 5
programa             : 0
programa1            : 1
programa2            : 2 4
retorno              : 35
suma                 : 75 76 76 77 77 78 78 79 79 80 80 81 81
tipo                 : 11 12 13 14 26 27 29 31 35
vars                 : 9 10
vars1                : 12 14 15 17
while                : 48

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON programa1

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SEMICOLON programa1

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SEMICOLON programa1

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . programa1
    (2) programa1 -> . decvars bloque programa2
    (3) programa1 -> . decvars bloque
    (4) programa1 -> . programa2
    (7) decvars -> . multivars
    (8) decvars -> . empty
    (5) programa2 -> . principal
    (9) multivars -> . vars
    (10) multivars -> . vars multivars
    (95) empty -> .
    (6) principal -> . MAIN LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto RBRACKET END
    (11) vars -> . VAR tipo ID SEMICOLON
    (12) vars -> . VAR tipo ID vars1
    (13) vars -> . VAR tipo ID arr SEMICOLON
    (14) vars -> . VAR tipo ID arr vars1

  ! shift/reduce conflict for MAIN resolved as shift
    FUNCTION        reduce using rule 95 (empty -> .)
    $end            reduce using rule 95 (empty -> .)
    MAIN            shift and go to state 12
    VAR             shift and go to state 13

  ! MAIN            [ reduce using rule 95 (empty -> .) ]

    programa1                      shift and go to state 5
    decvars                        shift and go to state 6
    programa2                      shift and go to state 7
    multivars                      shift and go to state 8
    empty                          shift and go to state 9
    principal                      shift and go to state 10
    vars                           shift and go to state 11

state 5

    (1) programa -> PROGRAM ID SEMICOLON programa1 .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMICOLON programa1 .)


state 6

    (2) programa1 -> decvars . bloque programa2
    (3) programa1 -> decvars . bloque
    (32) bloque -> . funcion
    (33) bloque -> . funcion bloque
    (34) bloque -> . empty
    (35) funcion -> . FUNCTION tipo ID LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto retorno RBRACKET
    (36) funcion -> . FUNCTION VOID ID LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto RBRACKET
    (95) empty -> .

    FUNCTION        shift and go to state 17
    MAIN            reduce using rule 95 (empty -> .)
    $end            reduce using rule 95 (empty -> .)

    bloque                         shift and go to state 14
    funcion                        shift and go to state 15
    empty                          shift and go to state 16

state 7

    (4) programa1 -> programa2 .

    $end            reduce using rule 4 (programa1 -> programa2 .)


state 8

    (7) decvars -> multivars .

    FUNCTION        reduce using rule 7 (decvars -> multivars .)
    MAIN            reduce using rule 7 (decvars -> multivars .)
    $end            reduce using rule 7 (decvars -> multivars .)
    ID              reduce using rule 7 (decvars -> multivars .)
    READ            reduce using rule 7 (decvars -> multivars .)
    PRINT           reduce using rule 7 (decvars -> multivars .)
    FOR             reduce using rule 7 (decvars -> multivars .)
    IF              reduce using rule 7 (decvars -> multivars .)
    WHILE           reduce using rule 7 (decvars -> multivars .)
    RBRACKET        reduce using rule 7 (decvars -> multivars .)
    RETURN          reduce using rule 7 (decvars -> multivars .)


state 9

    (8) decvars -> empty .

    FUNCTION        reduce using rule 8 (decvars -> empty .)
    MAIN            reduce using rule 8 (decvars -> empty .)
    $end            reduce using rule 8 (decvars -> empty .)
    ID              reduce using rule 8 (decvars -> empty .)
    READ            reduce using rule 8 (decvars -> empty .)
    PRINT           reduce using rule 8 (decvars -> empty .)
    FOR             reduce using rule 8 (decvars -> empty .)
    IF              reduce using rule 8 (decvars -> empty .)
    WHILE           reduce using rule 8 (decvars -> empty .)
    RBRACKET        reduce using rule 8 (decvars -> empty .)
    RETURN          reduce using rule 8 (decvars -> empty .)


state 10

    (5) programa2 -> principal .

    $end            reduce using rule 5 (programa2 -> principal .)


state 11

    (9) multivars -> vars .
    (10) multivars -> vars . multivars
    (9) multivars -> . vars
    (10) multivars -> . vars multivars
    (11) vars -> . VAR tipo ID SEMICOLON
    (12) vars -> . VAR tipo ID vars1
    (13) vars -> . VAR tipo ID arr SEMICOLON
    (14) vars -> . VAR tipo ID arr vars1

    FUNCTION        reduce using rule 9 (multivars -> vars .)
    MAIN            reduce using rule 9 (multivars -> vars .)
    $end            reduce using rule 9 (multivars -> vars .)
    ID              reduce using rule 9 (multivars -> vars .)
    READ            reduce using rule 9 (multivars -> vars .)
    PRINT           reduce using rule 9 (multivars -> vars .)
    FOR             reduce using rule 9 (multivars -> vars .)
    IF              reduce using rule 9 (multivars -> vars .)
    WHILE           reduce using rule 9 (multivars -> vars .)
    RBRACKET        reduce using rule 9 (multivars -> vars .)
    RETURN          reduce using rule 9 (multivars -> vars .)
    VAR             shift and go to state 13

    vars                           shift and go to state 11
    multivars                      shift and go to state 18

state 12

    (6) principal -> MAIN . LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto RBRACKET END

    LPARENTHESIS    shift and go to state 19


state 13

    (11) vars -> VAR . tipo ID SEMICOLON
    (12) vars -> VAR . tipo ID vars1
    (13) vars -> VAR . tipo ID arr SEMICOLON
    (14) vars -> VAR . tipo ID arr vars1
    (19) tipo -> . INT
    (20) tipo -> . FLOAT
    (21) tipo -> . CHAR
    (22) tipo -> . STRING

    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
    STRING          shift and go to state 24

    tipo                           shift and go to state 20

state 14

    (2) programa1 -> decvars bloque . programa2
    (3) programa1 -> decvars bloque .
    (5) programa2 -> . principal
    (6) principal -> . MAIN LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto RBRACKET END

    $end            reduce using rule 3 (programa1 -> decvars bloque .)
    MAIN            shift and go to state 12

    programa2                      shift and go to state 25
    principal                      shift and go to state 10

state 15

    (32) bloque -> funcion .
    (33) bloque -> funcion . bloque
    (32) bloque -> . funcion
    (33) bloque -> . funcion bloque
    (34) bloque -> . empty
    (35) funcion -> . FUNCTION tipo ID LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto retorno RBRACKET
    (36) funcion -> . FUNCTION VOID ID LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto RBRACKET
    (95) empty -> .

  ! reduce/reduce conflict for MAIN resolved using rule 32 (bloque -> funcion .)
  ! reduce/reduce conflict for $end resolved using rule 32 (bloque -> funcion .)
    MAIN            reduce using rule 32 (bloque -> funcion .)
    $end            reduce using rule 32 (bloque -> funcion .)
    FUNCTION        shift and go to state 17

  ! MAIN            [ reduce using rule 95 (empty -> .) ]
  ! $end            [ reduce using rule 95 (empty -> .) ]

    funcion                        shift and go to state 15
    bloque                         shift and go to state 26
    empty                          shift and go to state 16

state 16

    (34) bloque -> empty .

    MAIN            reduce using rule 34 (bloque -> empty .)
    $end            reduce using rule 34 (bloque -> empty .)


state 17

    (35) funcion -> FUNCTION . tipo ID LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto retorno RBRACKET
    (36) funcion -> FUNCTION . VOID ID LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto RBRACKET
    (19) tipo -> . INT
    (20) tipo -> . FLOAT
    (21) tipo -> . CHAR
    (22) tipo -> . STRING

    VOID            shift and go to state 28
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
    STRING          shift and go to state 24

    tipo                           shift and go to state 27

state 18

    (10) multivars -> vars multivars .

    FUNCTION        reduce using rule 10 (multivars -> vars multivars .)
    MAIN            reduce using rule 10 (multivars -> vars multivars .)
    $end            reduce using rule 10 (multivars -> vars multivars .)
    ID              reduce using rule 10 (multivars -> vars multivars .)
    READ            reduce using rule 10 (multivars -> vars multivars .)
    PRINT           reduce using rule 10 (multivars -> vars multivars .)
    FOR             reduce using rule 10 (multivars -> vars multivars .)
    IF              reduce using rule 10 (multivars -> vars multivars .)
    WHILE           reduce using rule 10 (multivars -> vars multivars .)
    RBRACKET        reduce using rule 10 (multivars -> vars multivars .)
    RETURN          reduce using rule 10 (multivars -> vars multivars .)


state 19

    (6) principal -> MAIN LPARENTHESIS . parameters RPARENTHESIS LBRACKET decvars estatuto RBRACKET END
    (24) parameters -> . parameters2
    (25) parameters -> . empty
    (26) parameters2 -> . tipo ID
    (27) parameters2 -> . tipo ID parameters3
    (95) empty -> .
    (19) tipo -> . INT
    (20) tipo -> . FLOAT
    (21) tipo -> . CHAR
    (22) tipo -> . STRING

    RPARENTHESIS    reduce using rule 95 (empty -> .)
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
    STRING          shift and go to state 24

    parameters                     shift and go to state 29
    parameters2                    shift and go to state 30
    empty                          shift and go to state 31
    tipo                           shift and go to state 32

state 20

    (11) vars -> VAR tipo . ID SEMICOLON
    (12) vars -> VAR tipo . ID vars1
    (13) vars -> VAR tipo . ID arr SEMICOLON
    (14) vars -> VAR tipo . ID arr vars1

    ID              shift and go to state 33


state 21

    (19) tipo -> INT .

    ID              reduce using rule 19 (tipo -> INT .)


state 22

    (20) tipo -> FLOAT .

    ID              reduce using rule 20 (tipo -> FLOAT .)


state 23

    (21) tipo -> CHAR .

    ID              reduce using rule 21 (tipo -> CHAR .)


state 24

    (22) tipo -> STRING .

    ID              reduce using rule 22 (tipo -> STRING .)


state 25

    (2) programa1 -> decvars bloque programa2 .

    $end            reduce using rule 2 (programa1 -> decvars bloque programa2 .)


state 26

    (33) bloque -> funcion bloque .

    MAIN            reduce using rule 33 (bloque -> funcion bloque .)
    $end            reduce using rule 33 (bloque -> funcion bloque .)


state 27

    (35) funcion -> FUNCTION tipo . ID LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto retorno RBRACKET

    ID              shift and go to state 34


state 28

    (36) funcion -> FUNCTION VOID . ID LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto RBRACKET

    ID              shift and go to state 35


state 29

    (6) principal -> MAIN LPARENTHESIS parameters . RPARENTHESIS LBRACKET decvars estatuto RBRACKET END

    RPARENTHESIS    shift and go to state 36


state 30

    (24) parameters -> parameters2 .

    RPARENTHESIS    reduce using rule 24 (parameters -> parameters2 .)


state 31

    (25) parameters -> empty .

    RPARENTHESIS    reduce using rule 25 (parameters -> empty .)


state 32

    (26) parameters2 -> tipo . ID
    (27) parameters2 -> tipo . ID parameters3

    ID              shift and go to state 37


state 33

    (11) vars -> VAR tipo ID . SEMICOLON
    (12) vars -> VAR tipo ID . vars1
    (13) vars -> VAR tipo ID . arr SEMICOLON
    (14) vars -> VAR tipo ID . arr vars1
    (15) vars1 -> . COMMA ID vars1
    (16) vars1 -> . COMMA ID SEMICOLON
    (17) vars1 -> . COMMA ID arr vars1
    (18) vars1 -> . COMMA ID arr SEMICOLON
    (23) arr -> . LSQRBRACKET CTEI RSQRBRACKET

    SEMICOLON       shift and go to state 38
    COMMA           shift and go to state 41
    LSQRBRACKET     shift and go to state 42

    vars1                          shift and go to state 39
    arr                            shift and go to state 40

state 34

    (35) funcion -> FUNCTION tipo ID . LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto retorno RBRACKET

    LPARENTHESIS    shift and go to state 43


state 35

    (36) funcion -> FUNCTION VOID ID . LPARENTHESIS parameters RPARENTHESIS LBRACKET decvars estatuto RBRACKET

    LPARENTHESIS    shift and go to state 44


state 36

    (6) principal -> MAIN LPARENTHESIS parameters RPARENTHESIS . LBRACKET decvars estatuto RBRACKET END

    LBRACKET        shift and go to state 45


state 37

    (26) parameters2 -> tipo ID .
    (27) parameters2 -> tipo ID . parameters3
    (28) parameters3 -> . COMMA ID parameters3
    (29) parameters3 -> . COMMA tipo ID parameters3
    (30) parameters3 -> . COMMA ID
    (31) parameters3 -> . COMMA tipo ID

    RPARENTHESIS    reduce using rule 26 (parameters2 -> tipo ID .)
    COMMA           shift and go to state 47

    parameters3                    shift and go to state 46

state 38

    (11) vars -> VAR tipo ID SEMICOLON .

    VAR             reduce using rule 11 (vars -> VAR tipo ID SEMICOLON .)
    FUNCTION        reduce using rule 11 (vars -> VAR tipo ID SEMICOLON .)
    MAIN            reduce using rule 11 (vars -> VAR tipo ID SEMICOLON .)
    $end            reduce using rule 11 (vars -> VAR tipo ID SEMICOLON .)
    ID              reduce using rule 11 (vars -> VAR tipo ID SEMICOLON .)
    READ            reduce using rule 11 (vars -> VAR tipo ID SEMICOLON .)
    PRINT           reduce using rule 11 (vars -> VAR tipo ID SEMICOLON .)
    FOR             reduce using rule 11 (vars -> VAR tipo ID SEMICOLON .)
    IF              reduce using rule 11 (vars -> VAR tipo ID SEMICOLON .)
    WHILE           reduce using rule 11 (vars -> VAR tipo ID SEMICOLON .)
    RBRACKET        reduce using rule 11 (vars -> VAR tipo ID SEMICOLON .)
    RETURN          reduce using rule 11 (vars -> VAR tipo ID SEMICOLON .)


state 39

    (12) vars -> VAR tipo ID vars1 .

    VAR             reduce using rule 12 (vars -> VAR tipo ID vars1 .)
    FUNCTION        reduce using rule 12 (vars -> VAR tipo ID vars1 .)
    MAIN            reduce using rule 12 (vars -> VAR tipo ID vars1 .)
    $end            reduce using rule 12 (vars -> VAR tipo ID vars1 .)
    ID              reduce using rule 12 (vars -> VAR tipo ID vars1 .)
    READ            reduce using rule 12 (vars -> VAR tipo ID vars1 .)
    PRINT           reduce using rule 12 (vars -> VAR tipo ID vars1 .)
    FOR             reduce using rule 12 (vars -> VAR tipo ID vars1 .)
    IF              reduce using rule 12 (vars -> VAR tipo ID vars1 .)
    WHILE           reduce using rule 12 (vars -> VAR tipo ID vars1 .)
    RBRACKET        reduce using rule 12 (vars -> VAR tipo ID vars1 .)
    RETURN          reduce using rule 12 (vars -> VAR tipo ID vars1 .)


state 40

    (13) vars -> VAR tipo ID arr . SEMICOLON
    (14) vars -> VAR tipo ID arr . vars1
    (15) vars1 -> . COMMA ID vars1
    (16) vars1 -> . COMMA ID SEMICOLON
    (17) vars1 -> . COMMA ID arr vars1
    (18) vars1 -> . COMMA ID arr SEMICOLON

    SEMICOLON       shift and go to state 48
    COMMA           shift and go to state 41
